--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -7,6 +7,7 @@
     text-align: center;
     background-color: #f8f9fa;
     padding-top: 30%;
+    overflow: hidden;
 }
 
 .image-group {
